# Cognition-Kernel

./: .gitignore  Cargo.toml  README.md  adaptive-test.txt
.cargo/: config.toml
cognition/: pyproject.toml  requirements.txt
cognition/cognition_kernel/: __init__.py  context.py  engine.py  ipc.py  models.py  planner.py  reasoner.py
cognition/tests/: test_ipc.py  test_planner.py
crates/ck-cli/: Cargo.toml
crates/ck-cli/src/: commands.rs  main.rs  tui.rs
crates/ck-events/: Cargo.toml
crates/ck-events/src/: bus.rs  lib.rs  log.rs  types.rs
crates/ck-events/tests/: bus_test.rs
crates/ck-ipc/: Cargo.toml
crates/ck-ipc/src/: protocol.rs  server.rs  types.rs
crates/ck-ipc/tests/: protocol_test.rs
crates/ck-kernel/: Cargo.toml
crates/ck-kernel/src/: config.rs  lib.rs  main.rs  runtime.rs  supervisor.rs  task.rs
crates/ck-kernel/tests/: task_test.rs
crates/ck-memory/: Cargo.toml
crates/ck-memory/src/: checkpoint.rs  lib.rs  schema.rs  store.rs
crates/ck-memory/tests/: store_test.rs
crates/ck-recovery/: Cargo.toml
crates/ck-recovery/src/: budget.rs  engine.rs  lib.rs
crates/ck-recovery/tests/: recovery_test.rs
crates/ck-verify/: Cargo.toml
crates/ck-verify/src/: engine.rs  strategies.rs
crates/ck-verify/tests/: verify_test.rs
docs/superpowers/plans/: 2026-05-22-cognition-kernel-v1.md  2026-05-22-v1.1-limitations-fix.md  2026-05-22-v1.2-feedback-browser-daemon.md
docs/superpowers/specs/: 2026-05-22-cognition-kernel-design.md
tests/: checkpoint_resume_test.rs  integration_test.rs
workers/: browser_bridge.py  go.mod  go.sum
workers/cmd/ck-worker/: main.go
workers/internal/browser/: worker.go
workers/internal/filesystem/: worker.go  worker_test.go
workers/internal/ipc/: client.go  dial_unix.go  dial_windows.go
workers/internal/shell/: executor.go  executor_test.go
workers/pkg/protocol/: types.go
