[workspace]
resolver = "2"
members = [
    "crates/ck-kernel",
    "crates/ck-events",
    "crates/ck-memory",
    "crates/ck-ipc",
    "crates/ck-verify",
    "crates/ck-recovery",
    "crates/ck-cli",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
rmp-serde = "1"
bincode = "1"
ulid = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
