[package]
name = "cognition-kernel"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "crates/ck-kernel",
    "crates/ck-events",
    "crates/ck-memory",
    "crates/ck-ipc",
    "crates/ck-verify",
    "crates/ck-recovery",
    "crates/ck-cli",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
rmp-serde = "1"
bincode = "1"
ulid = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }


[dev-dependencies]
ck-kernel = { path = "crates/ck-kernel" }
ck-events = { path = "crates/ck-events" }
ck-memory = { path = "crates/ck-memory" }
ck-verify = { path = "crates/ck-verify" }
ck-recovery = { path = "crates/ck-recovery" }
tokio = { version = "1", features = ["full"] }
tempfile = "3"
serde_json = "1"
bincode = "1"
