[project]
name = "cognition-kernel"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40.0",
    "msgpack>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
ck-cognition = "cognition_kernel.engine:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
