[package]
name = "ck-kernel"
version = "0.1.0"
edition = "2021"

[lib]
name = "ck_kernel"
path = "src/lib.rs"

[[bin]]
name = "ck-kernel"
path = "src/main.rs"

[dependencies]
ck-events = { path = "../ck-events" }
ck-memory = { path = "../ck-memory" }
ck-ipc = { path = "../ck-ipc" }
ck-verify = { path = "../ck-verify" }
ck-recovery = { path = "../ck-recovery" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ulid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
